--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
