--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "spotsball",
   "version": "0.1.0",
+"homepage": "/spotsball/web",
   "private": true,
   "dependencies": {
+    "@cashfreepayments/cashfree-js": "^1.0.5",
+    "@cashfreepayments/cashfree-sdk": "^0.1.7",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "cashfree-sdk": "^0.1.1",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
