--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotsball",
   "version": "0.1.0",
-"homepage": "/spotsball/web",
+  "homepage": "/spotsball/web",
   "private": true,
   "dependencies": {
     "@cashfreepayments/cashfree-js": "^1.0.5",
@@ -15,6 +15,7 @@
     "cashfree-sdk": "^0.1.1",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
+    "gsap": "^3.12.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
