--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.7",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.2",
