--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "generate-version": "node generateVersion.js",
+    "build": "npm run generate-version && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
